@@ -35,6 +35,7 @@
 498,1	//AM_TWILIGHT3
 512,3	//GS_TRACKING
 1014,1	//PR_REDEMPTIO
+2050,1	//AB_RENOVATIO
 10010,3	//GD_BATTLEORDER
 10011,3	//GD_REGENERATION
 10012,6	//GD_RESTORE
