@@ -37,6 +37,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <time.h>
+#include <math.h>
 
 
 #define SKILLUNITTIMER_INTERVAL	100
@@ -1148,7 +1149,7 @@ int skill_additional_effect (struct block_list* src, struct block_list *bl, int 
 				if( sd && skill_get_cooldown( skill, skilllv ) ) // Skill cooldown. [LimitLine]
 					skill_blockpc_start(sd, skill, skill_get_cooldown(skill, skilllv));
 					if ( battle_config.display_status_timers && sd && skill_get_delay(skill, skilllv))
-						clif_status_change(src, SI_ACTIONDELAY, 1, 0, 0, 1, rate);
+						clif_status_change(src, SI_ACTIONDELAY, 1, rate, 0, 0, 1);
 				}
 			}
 		}
@@ -1421,7 +1422,7 @@ int skill_counter_additional_effect (struct block_list* src, struct block_list *
 					if( sd && skill_get_cooldown( skillid, skilllv ) ) // Skill cooldown. [LimitLine]
 						skill_blockpc_start(sd, skillid, skill_get_cooldown(skillid, skilllv));
 					if ( battle_config.display_status_timers && dstsd && skill_get_delay(skillid, skilllv))
-						clif_status_change(bl, SI_ACTIONDELAY, 1, 0, 0, 1, rate);
+						clif_status_change(bl, SI_ACTIONDELAY, 1, rate, 0, 0, 1);
 				}
 			}
 		}
@@ -6725,7 +6726,7 @@ int skill_castend_id(int tid, unsigned int tick, int id, intptr data)
 		if( !sd || sd->skillitem != ud->skillid || skill_get_delay(ud->skillid,ud->skilllv) )
 			ud->canact_tick = tick + skill_delayfix(src, ud->skillid, ud->skilllv); //Tests show wings don't overwrite the delay but skill scrolls do. [Inkfish]
 		if( battle_config.display_status_timers && sd && skill_get_delay(ud->skillid, ud->skilllv))
-			clif_status_change(src, SI_ACTIONDELAY, 1, 0, 0, 1, skill_delayfix(src, ud->skillid, ud->skilllv));
+			clif_status_change(src, SI_ACTIONDELAY, 1, skill_delayfix(src, ud->skillid, ud->skilllv), 0, 0, 1);
 
 		if( sd )
 		{
@@ -6943,7 +6944,7 @@ int skill_castend_pos(int tid, unsigned int tick, int id, intptr data)
 		if( !sd || sd->skillitem != ud->skillid || skill_get_delay(ud->skillid,ud->skilllv) )
 			ud->canact_tick = tick + skill_delayfix(src, ud->skillid, ud->skilllv);
 		if( battle_config.display_status_timers && sd && skill_get_delay(ud->skillid, ud->skilllv))
-			clif_status_change(src, SI_ACTIONDELAY, 1, 0, 0, 1, skill_delayfix(src, ud->skillid, ud->skilllv));
+			clif_status_change(src, SI_ACTIONDELAY, 1, skill_delayfix(src, ud->skillid, ud->skilllv), 0, 0, 1);
 //		if( sd )
 //		{
 //			switch( ud->skillid )
@@ -10182,12 +10183,13 @@ struct skill_condition skill_get_requirement(struct map_session_data* sd, short 
 	return req;
 }
 
-/*==========================================
- * Does cast-time reductions based on dex, item bonuses and config setting
- *------------------------------------------*/
-int skill_castfix (struct block_list *bl, int skill_id, int skill_lv)
+/*================================================
+ * Renewal Cast Time Settings (variable and fixed) [Jobbie] [Inkfish]
+ *----------------------------------------------*/
+int skill_castfix(struct block_list *bl, int skill_id, int skill_lv)
 {
-	int time = skill_get_cast(skill_id, skill_lv);
+	int variable_time, fixed_time, final_time, fixed_reduction = 0;
+	double scale = 0;
 	struct map_session_data *sd;
 	struct status_change *sc;
 
@@ -10195,65 +10197,58 @@ int skill_castfix (struct block_list *bl, int skill_id, int skill_lv)
 	sd = BL_CAST(BL_PC, bl);
 	sc = status_get_sc(bl);
 
-	// calculate base cast time (reduced by dex)
+	variable_time = skill_get_cast(skill_id, skill_lv) * 80/100;// 80% of casttime is variable
+	fixed_time = skill_get_cast(skill_id, skill_lv) * 20/100;// 20% of casttime is fixed
+
+	// calculate variable cast time reduced by dex and int
 	if( !(skill_get_castnodex(skill_id, skill_lv)&1) )
-	{
-		int scale = battle_config.castrate_dex_scale - status_get_dex(bl);
-		if( scale > 0 )	// not instant cast
-			time = time * scale / battle_config.castrate_dex_scale;
-		else return 0;	// instant cast
-	}
+		scale = cap_value((status_get_dex(bl)*2 + status_get_int(bl))*10000, INT_MIN, INT_MAX);
 
-	if( sd && pc_checkskill(sd, WL_RADIUS) && skill_id >= WL_WHITEIMPRISON && skill_id <= WL_FREEZE_SP )
-		time = time - ( time / 100 * 2 + 2 * skill_lv );
-
-	// calculate cast time reduced by item/card bonuses
+	// calculate variable cast time reduced by item/card/skills bonuses
 	if( !(skill_get_castnodex(skill_id, skill_lv)&4) && sd )
 	{
 		int i;
 		if( sd->castrate != 100 )
-			time = time * sd->castrate / 100;
+			variable_time = variable_time * sd->castrate / 100;
 		for( i = 0; i < ARRAYLENGTH(sd->skillcast) && sd->skillcast[i].id; i++ )
 		{
 			if( sd->skillcast[i].id == skill_id )
 			{
-				time+= time * sd->skillcast[i].val / 100;
+				variable_time += variable_time * sd->skillcast[i].val / 100;
 				break;
 			}
 		}
 	}
 
+	if( sd && pc_checkskill(sd, WL_RADIUS) && skill_id >= WL_WHITEIMPRISON && skill_id <= WL_FREEZE_SP )
+		fixed_time -= (fixed_time * ( 5 + 5 * skill_lv ))/100; //10*SkillLV% of Fixed Cast Time reduced.
+	
+	// calculate variable and fixed cast time reduced on sc data
+	if ( !(skill_get_castnodex(skill_id, skill_lv)&2) && sc && sc->count) {
+		if (sc->data[SC_SLOWCAST])
+			variable_time += variable_time * sc->data[SC_SLOWCAST]->val2 / 100;
+		if (sc->data[SC_SUFFRAGIUM])
+			variable_time -= variable_time * sc->data[SC_SUFFRAGIUM]->val2 / 100;
+		if (sc->data[SC_MEMORIZE])
+			variable_time /= 2;
+		if (sc->data[SC_POEMBRAGI])
+			variable_time -= variable_time * sc->data[SC_POEMBRAGI]->val2 / 100;
+		if( sc->data[SC_FREEZING] )
+			fixed_time += fixed_time * sc->data[SC_FREEZING]->val2 / 100;
+		if (sc->data[SC_SECRAMENT])
+			fixed_time -= fixed_time * sc->data[SC_SECRAMENT]->val2 / 100;
+	}
+
+	final_time = (100 - (int)sqrt(scale/530.)) * variable_time / 100;
+	if( final_time < 0 ) final_time = 0;
+	final_time += fixed_time;  
+
 	// config cast time multiplier
 	if (battle_config.cast_rate != 100)
-		time = time * battle_config.cast_rate / 100;
+		final_time = final_time * battle_config.cast_rate / 100;
 
 	// return final cast time
-	return (time > 0) ? time : 0;
-}
-
-/*==========================================
- * Does cast-time reductions based on sc data.
- *------------------------------------------*/
-int skill_castfix_sc (struct block_list *bl, int time)
-{
-	struct status_change *sc = status_get_sc(bl);
-
-	if (sc && sc->count) {
-		if (sc->data[SC_SLOWCAST])
-			time += time * sc->data[SC_SLOWCAST]->val2 / 100;
-		if (sc->data[SC_SUFFRAGIUM]) {
-			time -= time * sc->data[SC_SUFFRAGIUM]->val2 / 100;
-			status_change_end(bl, SC_SUFFRAGIUM, -1);
-		}
-		if (sc->data[SC_MEMORIZE]) {
-			time>>=1;
-			if ((--sc->data[SC_MEMORIZE]->val2) <= 0)
-				status_change_end(bl, SC_MEMORIZE, -1);
-		}
-		if (sc->data[SC_POEMBRAGI])
-			time -= time * sc->data[SC_POEMBRAGI]->val2 / 100;
-	}
-	return (time > 0) ? time : 0;
+	return (final_time > 0) ? final_time : 0;
 }
 
 /*==========================================
